test/corpus/matchers.txt
================
Wildcard Matcher
================

example.com

reverse_proxy * 127.0.0.1

---

(source_file
	(single_site
		name: (site_address)
		body: (directive
			name: (directive_name)
			(matcher)
			(network_address))))

============
Path Matcher
============

example.com

reverse_proxy /path 127.0.0.1

---

(source_file
	(single_site
		name: (site_address)
		body: (directive
			name: (directive_name)
			(matcher
				(path_matcher))
			(network_address))))

=====================
Wildcard Path Matcher
=====================

example.com

reverse_proxy /path* 127.0.0.1

---

(source_file
	(single_site
		name: (site_address)
		body: (directive
			name: (directive_name)
			(matcher
				(path_matcher))
			(network_address))))
